test/src/e2e_vm_tests/test_programs/should_fail/abi_associated_const_missing_impl/src/main.sw
contract;

abi ConstantId {
    const ID: u32;
}

impl ConstantId for Contract { }
